pricing page added

--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -46,3 +46,8 @@
   justify-content: space-around;
   background: white;
 }
+.pricing-link {
+  color: white;
+  margin-top: 20px;
+  text-decoration: none;
+}
