--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+           <%= link_to 'Pricing', pricing_path, class: "pricing-link"%>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.chaincare.tech/tickets/new">Create a Ticket</a>
