--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-           <%= link_to 'Pricing', pricing_path, class: "pricing-link"%>
+           <%= link_to 'Pricing', pricing_path, class: "nav-link"%>
           </li>
           <li class="nav-item">
             <%= link_to 'Create a Ticket', new_ticket_path, class: "nav-link"%>
