sweetalert on ticket new page

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -49,7 +49,7 @@
       <% if @chatroom.ticket.user != nil %>
         <h2 class="mb-4 text-center"><%= @chatroom.ticket.user.first_name %> is here to help!</h2>
       <% else %>
-        <h2 class="mb-4 text-center">Welcome to your LiveChat, an agent will be with you soon 🕑</h2>
+        <h2 class="mb-4 text-center">Welcome to your LiveChat</h2>
       <% end %>
     </div>
     <div class="row mb-4">
