--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -51,8 +51,13 @@
 
 </div>
 
-  <%= simple_form_for(@ticket) do |f| %>
-   <%= f.error :base %>
+  <%= simple_form_for(@ticket, html: {
+      data: {
+        controller: "alert",
+        action: "submit->alert#initSweetalert",
+        turbo: false
+      } }) do |f| %>
+    <%= f.error :base %>
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
