--- a/app/assets/stylesheets/components/_ticket.scss
+++ b/app/assets/stylesheets/components/_ticket.scss
@@ -6,3 +6,14 @@
   margin: auto;
 }
 
+
+.ticket-table-container {
+  background-color: $light-gray;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 12px;
+  padding-bottom: 8px;
+  margin-top: 24px;
+  border-radius: 16px;
+
+}
