--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -130,7 +130,7 @@ h4{
   height: auto;
 }
 
-input[type=text], select, textarea {
+.my-input-class[type=text], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -139,7 +139,7 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=submit] {
+.my-input-class[type=submit] {
   background-color: $verydarkblue;
   color: white;
   padding: 12px 20px;
@@ -147,19 +147,19 @@ input[type=submit] {
   cursor: pointer;
 }
 
-input[type=submit]:hover {
+.my-input-class[type=submit]:hover {
   background-color: $verydarkblue;
 }
 
 /* Style the container/contact section */
-.container {
+.contact-container {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 10px;
 }
 
 /* Create two columns that float next to eachother */
-.column {
+.contact-column {
   float: left;
   width: 50%;
   margin-top: 6px;
@@ -167,7 +167,7 @@ input[type=submit]:hover {
 }
 
 /* Clear floats after the columns */
-.row:after {
+.contact-row:after {
   content: "";
   display: table;
   clear: both;
@@ -175,7 +175,7 @@ input[type=submit]:hover {
 
 /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-  .column, input[type=submit] {
+  .contact-column, .my-input-class[type=submit] {
     width: 100%;
     margin-top: 0;
   }
