--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -92,21 +92,21 @@
     </div>
   </div>
    
-  <div class="container">
+  <div class="contact-container">
     <div style="text-align:center">
       <h2>Contact Us</h2>
       <p>For sales enquiries call , or leave us a message:</p>
     </div>
-    <div class="row">
-      <div class="column">
+    <div class="contact-row">
+      <div class="contact-column">
         <%# <img src="/w3images/map.jpg" style="width:100%"> %>
       </div>
-      <div class="column">
+      <div class="contact-column">
         <form action="/action_page.php">
           <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+          <input type="text" id="fname" name="firstname" placeholder="Your name.." class="my-input-class">
           <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+          <input type="text" id="lname" name="lastname" placeholder="Your last name.." class="my-input-class">
           <label for="country">Country</label>
           <select id="country" name="country">
             <option value="australia">Australia</option>
@@ -115,7 +115,7 @@
           </select>
           <label for="subject">Subject</label>
           <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-          <input type="submit" value="Submit">
+          <input type="submit" value="Submit" class="my-input-class">
         </form>
       </div>
     </div>
