--- a/app/assets/stylesheets/components/_explorer.scss
+++ b/app/assets/stylesheets/components/_explorer.scss
@@ -18,7 +18,7 @@
 }
 
 .search-form-control .form-control:focus {
-  border: 1px solid #1EDD88;
+  border: 1px solid #0f1940;
   outline: none !important;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
