--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -24,12 +24,12 @@
     </div>
   </div>
 
-  <div class="ticket-table-container">
+  <div class="ticket-table-container" data-controller="tickets-filter">
     <div class="row mt-2 mb-3 space-between">
       <div class="col-3 d-flex align-items-end">
         <h3>Dashboard</h3>
       </div>
-      <div class="col-9 d-flex justify-content-end"> <!-- Use flexbox for alignment -->
+      <div class="col-9 d-flex justify-content-end">
         <div class="mx-2">
           <%= form_with url: tickets_path, method: :get, class: "d-flex" do %>
             <%= text_field_tag :query,
@@ -45,16 +45,15 @@
           <button class="btn btn-success dropdown-toggle" type="button" id="filterDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa-solid fa-filter"></i>
           </button>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="filterDropdown">
-            <a class="dropdown-item" href="#" onclick="filterTickets('all')">All Tickets</a>
-            <a class="dropdown-item" href="#" onclick="filterTickets('open')">Open Tickets</a>
-            <a class="dropdown-item" href="#" onclick="filterTickets('assigned')">Assigned Tickets</a>
-            <a class="dropdown-item" href="#" onclick="filterTickets('closed')">Closed Tickets</a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="filterDropdown" data-action="change->tickets-filter#filterTickets" >
+            <a class="dropdown-item" href="#" data-action="click->tickets-filter#filterTickets" data-status="all">All Tickets</a>
+            <a class="dropdown-item" href="#" data-action="click->tickets-filter#filterTickets" data-status="open">Open Tickets</a>
+            <a class="dropdown-item" href="#" data-action="click->tickets-filter#filterTickets" data-status="assigned">Assigned Tickets</a>
+            <a class="dropdown-item" href="#" data-action="click->tickets-filter#filterTickets" data-status="closed">Closed Tickets</a>
           </div>
         </div>
       </div>
     </div>
-
 
     <table class="table table-hover">
       <thead>
@@ -71,7 +70,7 @@
         <% @tickets.each do |ticket| %>
           <% if ticket.user.present? %>
             <% if ticket.user == @current_user %>
-              <tr class="table-row" data-status="<%= ticket.status %>" onclick="window.location='<%= chatroom_path(ticket.chatroom) %>';">
+              <tr class="table-row" data-status="<%= ticket.status %>" data-tickets-filter-target="tableRow" onclick="window.location='<%= chatroom_path(ticket.chatroom) %>';">
                 <td><%= ticket.subject %></td>
                 <td><%= ticket.client_email %></td>
                 <td><%= ticket.updated_at.strftime("%Y-%m-%d %H:%M") %></td> <!-- Adjust date format -->
@@ -79,7 +78,7 @@
                 <td><%= ticket.user.first_name.capitalize %> <%= ticket.user.last_name.capitalize %></td>
               </tr>
             <% else %>
-              <tr class="table-row" data-status="<%= ticket.status %>" onclick="window.location='<%= show_ticket_path(ticket) %>';">
+              <tr class="table-row" data-status="<%= ticket.status %>" data-tickets-filter-target="tableRow" onclick="window.location='<%= show_ticket_path(ticket) %>';">
                 <td><%= ticket.subject %></td>
                 <td><%= ticket.client_email %></td>
                 <td><%= ticket.updated_at.strftime("%Y-%m-%d %H:%M") %>
@@ -88,7 +87,7 @@
               </tr>
             <% end %>
           <% else %>
-            <tr class="table-row" data-status="<%= ticket.status %>" onclick="window.location='<%= show_ticket_path(ticket) %>';">
+            <tr class="table-row" data-status="<%= ticket.status %>" data-tickets-filter-target="tableRow" onclick="window.location='<%= show_ticket_path(ticket) %>';">
               <td><%= ticket.subject %></td>
               <td><%= ticket.client_email %></td>
               <td><%= ticket.updated_at.strftime("%Y-%m-%d %H:%M") %></td> <!-- Adjust date format -->
@@ -114,20 +113,4 @@
     background-color: #f9f9f9;
     cursor: pointer;
   }
-</style>
-
-<script>
-  function filterTickets(status) {
-    const rows = document.querySelectorAll('.table-row');
-
-    rows.forEach((row) => {
-      const ticketStatus = row.getAttribute('data-status');
-
-      if (status === 'all') {
-        row.style.display = 'table-row';
-      } else {
-        row.style.display = ticketStatus === status ? 'table-row' : 'none';
-      }
-    });
-  }
-</script>
+</styl
