--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,16 +9,16 @@
       <%= link_to "Create a Ticket", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 " %>
       <%= link_to "Start Free Trial", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 ml-5" %>
     </div>
-  
+
     <div class="support-agent col-lg-4 col-md-8 col-sm-12">
 
-    
+
     </div>
   </div>
 
   <div class="row col-12 col-lg-12">
     <div class="text-center">
-      <h2 class="features">Why Chaincare?</h2>
+      <h2 class="features">Features</h2>
     </div>
 
     <div class="features-box">
@@ -54,18 +54,12 @@
     </div>
   </div>
 
-  
+
 
   <div class= "row col-12 col-lg-12 mb-4">
     <div class="chaincare text-center">
-      <h2 class= "mb-12  mt-5" >Get Started</h2>
-       <p>
-      <div class="screenshot-container">
-        <%= image_tag "screenshot.png" , class: "screenshot" %>
-        <%= image_tag "dashboard.png" , class: "dashboard" %>
-      </div>
+      <h2 class= "mb-12  mt-5" >Why Chaincare?</h2>
     </div>
-
     <%# <div class="card-product mt-5 p-2">
       <div>
        <%= image_tag "AdobeStock_494817999.jpeg"%></div>
@@ -75,12 +69,12 @@
         <p> With ChainCare, you gain a trusted partner that streamlines ticket management, offers in-depth integration features, and ensures prompt resolution of your queries.</p>
         <p>Choose ChainCare for unparalleled support, enabling you to harness the full potential of web3 technologies effortlessly."</p>
       </div>
-    </div> 
+    </div>
       <p>Get started in minutes</p>
       <p>Quick and easy resolution<p>
       <div class="contact-support col-lg-4 col-md-8 col-sm-12">
        <%= image_tag "AdobeStock_494817999.jpeg"%>
-      
+
       </div>
   </div>
 
@@ -91,36 +85,6 @@
       </div>
     </div>
   </div>
-   
-  <div class="container">
-    <div style="text-align:center">
-      <h2>Contact Us</h2>
-      <p>For sales enquiries call , or leave us a message:</p>
-    </div>
-    <div class="row">
-      <div class="column">
-        <%# <img src="/w3images/map.jpg" style="width:100%"> %>
-      </div>
-      <div class="column">
-        <form action="/action_page.php">
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name..">
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-          <label for="country">Country</label>
-          <select id="country" name="country">
-            <option value="australia">Australia</option>
-            <option value="canada">Canada</option>
-            <option value="usa">USA</option>
-          </select>
-          <label for="subject">Subject</label>
-          <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-    </div>
-  </div>
-
 
 </div>
 
