--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
            <%= link_to 'Pricing', pricing_path, class: "nav-link"%>
           </li>
           <li class="nav-item">
-            <%= link_to 'Create a Ticket', new_ticket_path, class: "nav-link"%>
+            <%= link_to 'Get Support', new_ticket_path, class: "nav-link"%>
 
           </li>
           <% if user_signed_in? %>
@@ -27,7 +27,9 @@
             </li>
             <li class="nav-item dropdown">
               <a href="#" class="avatar" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <% unless @current_user.photo.key.nil? %>
+                <% if @current_user.photo.key.nil? %>
+                 <%= image_tag asset_path("avatar_placeholder.png"), class: "avatar" %>
+                <% else %>
                   <%= cl_image_tag @current_user.photo.key, class: "avatar", alt: "avatar", crop: :fill%>
                 <% end %>
               </a>
