--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -57,9 +57,7 @@
         action: "submit->alert#initSweetalert",
         turbo: false
       } }) do |f| %>
-    <%= f.error :base %>
-    <%= f.error_notification %>
-    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <%= f.error_notification message: "Please fill in required fields" %>
 
     <div class="form-inputs">
       <%= f.input :wallet_address, label: 'Wallet Address', input_html: { data: {wallet_target: "address"}, style: 'color: black;' } %>
