--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -6,6 +6,8 @@
 
   margin-bottom: 0px;
   width: 100vw;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .navbar button.navbar-toggler span.navbar-toggler-icon {
