--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,19 +3,19 @@
 <div class="banner">
   <div class="banner-content text-center">
        <h1>Seamless Support for Web3</h1>
-       <p class=>Our customer support application makes it easier to use (Web 3) technologies.</p> 
+       <p class=>Our customer support application makes it easier to use (Web 3) technologies.</p>
        <p class>We provide real-time customer support and proactive solutions to help you navigate the complexities of Web3 technologies.</p>
       <div class="d-flex justify-content-center">
         <%= link_to "Create a Ticket", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3 p-3 border border-light " %>
-        <%# <%= link_to "Start Free Trial", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3  my-3" %> %>
+        <%# <%= link_to "Start Free Trial", new_ticket_path, class: "btn btn-primary text-light btn-lg rounded shadow-sm mt-3  my-3" %>
      </div>
- </div> 
+ </div>
 
 
 
 
-  
-</div> 
+
+</div>
 
 
 <div class="footer">
