--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: transparent;
+  background-color: #0f1940;
   position: relative;
   bottom: 0;
   display: flex;
@@ -7,7 +7,7 @@
   align-items: center;
   height: 60px;
   padding: 0px 50px;
-  color: $verydarkblue;
+  color: $white;
   width: 100%
 }
 .footer-links {
@@ -15,7 +15,7 @@
   align-items: center;
 }
 .footer-links a {
-  color: black;
+  color: $white;
   opacity: 0.15;
   text-decoration: none;
   font-size: 24px;
@@ -25,7 +25,7 @@
   opacity: 1;
 }
 .footer .fa-heart {
-  color: #D23333;
+  color: $verylightblue;
 }
 
 
