--- a/app/views/shared/_vertical_navbar.html.erb
+++ b/app/views/shared/_vertical_navbar.html.erb
@@ -1,11 +1,13 @@
 <div class="navbar-expand-sm navbar-light vertical-navbar">
   <div class="container-fluid h-100">
-    <ul class="nav flex-column mt-4">
-      <li class="nav-item active mb-3">
-        <% if @current_user.photo.key.nil? %>
-          <%= image_tag asset_path("avatar_placeholder.png"), class: "avatar-small" %>
-        <% else %>
-          <%= cl_image_tag @current_user.photo.key, class: "avatar-small", alt: "avatar", crop: :fill%>
+    <ul class="nav flex-column align-items-center mt-4">
+      <li class="nav-item active align-items-center">
+        <%= link_to account_path, class: "nav-link fs-1" do %>
+          <% if @current_user.photo.key.nil? %>
+            <%= image_tag asset_path("avatar_placeholder.png"), class: "avatar-small" %>
+          <% else %>
+            <%= cl_image_tag @current_user.photo.key, class: "avatar-small", alt: "avatar", crop: :fill%>
+          <% end %>
         <% end %>
       </li>
       <li class="nav-item active">
