changes button color filter

--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -38,11 +38,11 @@
               autocomplete: "off",
               placeholder: "Filter"
             %>
-            <%= submit_tag "Search", name: "", class: "btn btn-success" %>
+            <%= submit_tag "Search", name: "", class: "btn btn-primary" %>
           <% end %>
         </div>
         <div class="dropdown d-flex align-items-stretch">
-          <button class="btn btn-success dropdown-toggle" type="button" id="filterDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-primary dropdown-toggle" type="button" id="filterDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa-solid fa-filter"></i>
           </button>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="filterDropdown">
