--- a/app/assets/stylesheets/pages/_navbar.scss
+++ b/app/assets/stylesheets/pages/_navbar.scss
@@ -3,11 +3,12 @@
   color: $primary;
   justify-content: space-between;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-
+  z-index: 1;
   margin-bottom: 0px;
   width: 100vw;
   padding-left: 5px;
   padding-right: 5px;
+  position:fixed;
 }
 
 .navbar button.navbar-toggler span.navbar-toggler-icon {
