--- a/app/assets/stylesheets/components/_vertical_navbar.scss
+++ b/app/assets/stylesheets/components/_vertical_navbar.scss
@@ -7,6 +7,12 @@
   top: 0;
   .nav-link {
     padding-left: 0;
+    padding-right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 60px;
   }
   margin-right: 20px;
 }
