changes format to webm

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
       </div>
  </div>
 
-<%= video_tag "Chaincare.mp4", controls: false, autoplay: true, muted: true, loop: false, class: "fullscreen-bg-video", type: "video/mp4" %>
+<%= video_tag "Chaincare.webm", controls: false, autoplay: true, muted: true, loop: false, class: "fullscreen-bg-video", type: "video/webm" %>
 
 </div>
 
